@@ -1,12 +1,14 @@
 package org.bukkit.event.block;
 
 import com.google.common.collect.ImmutableList;
-import java.util.List;
 import org.bukkit.block.Block;
 import org.bukkit.block.BlockState;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.ItemStack;
+import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
+
+import java.util.List;
 
 /**
  * Fired when a single block placement action of a player triggers the
@@ -16,11 +18,19 @@ import org.jetbrains.annotations.NotNull;
  * block.
  */
 public class BlockMultiPlaceEvent extends BlockPlaceEvent {
-    private final List<BlockState> states;
 
-    public BlockMultiPlaceEvent(@NotNull List<BlockState> states, @NotNull Block clicked, @NotNull ItemStack itemInHand, @NotNull Player thePlayer, boolean canBuild) {
-        super(states.get(0).getBlock(), states.get(0), clicked, itemInHand, thePlayer, canBuild);
-        this.states = ImmutableList.copyOf(states);
+    private final List<BlockState> replacedStates;
+
+    @ApiStatus.Internal
+    @Deprecated(forRemoval = true)
+    public BlockMultiPlaceEvent(@NotNull List<BlockState> replacedStates, @NotNull Block clicked, @NotNull ItemStack itemInHand, @NotNull Player thePlayer, boolean canBuild) {
+        this(replacedStates, clicked, itemInHand, thePlayer, canBuild, org.bukkit.inventory.EquipmentSlot.HAND);
+    }
+
+    @ApiStatus.Internal
+    public BlockMultiPlaceEvent(@NotNull List<BlockState> replacedStates, @NotNull Block clicked, @NotNull ItemStack itemInHand, @NotNull Player thePlayer, boolean canBuild, @NotNull org.bukkit.inventory.EquipmentSlot hand) {
+        super(replacedStates.getFirst().getBlock(), replacedStates.getFirst(), clicked, itemInHand, thePlayer, canBuild, hand);
+        this.replacedStates = ImmutableList.copyOf(replacedStates);
     }
 
     /**
@@ -32,6 +42,6 @@ public class BlockMultiPlaceEvent extends BlockPlaceEvent {
      */
     @NotNull
     public List<BlockState> getReplacedBlockStates() {
-        return states;
+        return this.replacedStates;
     }
 }
